woop woop this is getting nice

--- a/index.html
+++ b/index.html
@@ -35,7 +35,113 @@
                 </div>
             </div>
             <div class="simulation">
-                here will come the simulation
+                <div class="processor">
+                    <ul class="topPins">
+                        <li class="pin top out-0-0"></li>
+                        <li class="pin top out-0-1"></li>
+                        <li class="pin top out-0-2"></li>
+                        <li class="pin top out-0-3"></li>
+
+                        <li class="pin top out-1-0"></li>
+                        <li class="pin top out-1-1"></li>
+                        <li class="pin top out-1-2"></li>
+                        <li class="pin top out-1-3"></li>
+
+                        <li class="pin top out-2-0"></li>
+                        <li class="pin top out-2-1"></li>
+                        <li class="pin top out-2-2"></li>
+                        <li class="pin top out-2-3"></li>
+
+                        <li class="pin top out-3-0"></li>
+                        <li class="pin top out-3-1"></li>
+                        <li class="pin top out-3-2"></li>
+                        <li class="pin top out-3-3"></li>
+
+                        <li class="pin top out-4-0"></li>
+                        <li class="pin top out-4-1"></li>
+                        <li class="pin top out-4-2"></li>
+                        <li class="pin top out-4-3"></li>
+
+                        <li class="pin top out-5-0"></li>
+                        <li class="pin top out-5-1"></li>
+                        <li class="pin top out-5-2"></li>
+                        <li class="pin top out-5-3"></li>
+
+                        <li class="pin top out-6-0"></li>
+                        <li class="pin top out-6-1"></li>
+                        <li class="pin top out-6-2"></li>
+                        <li class="pin top out-6-3"></li>
+
+                        <li class="pin top out-7-0"></li>
+                        <li class="pin top out-7-1"></li>
+                        <li class="pin top out-7-2"></li>
+                        <li class="pin top out-7-3"></li>
+                    </ul>
+                    <ul class="leftPins">
+                        <li class="pin pin-in clock left"></li>
+                        <li class="pin halted left"></li>
+                    </ul>
+                    <div class="body">
+                        <div class="ram"></div>
+                        <div class="alu"></div>
+                        <div class="cpu"></div>
+                    </div>
+                    <ul class="rightPins">
+                        <li class="pin pin-in right"></li>
+                        <li class="pin pin-in right"></li>
+                        <li class="pin pin-in right"></li>
+                        <li class="pin pin-in right"></li>
+
+                        <li class="pin pin-in right"></li>
+                        <li class="pin pin-in right"></li>
+                        <li class="pin pin-in right"></li>
+                        <li class="pin pin-in right"></li>
+
+                        <li class="pin pin-in right"></li>
+                        <li class="pin pin-in right"></li>
+                    </ul>
+                    <ul class="bottomPins">
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in bottom"></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div id="foot">
@@ -54,10 +160,11 @@
     </main>
 
     <script type="text/javascript" src="assets/js/instructions.js"></script>
+    <script type="text/javascript" src="assets/js/processor.js"></script>
     <script type="text/javascript" src="assets/js/preCompilerRegistries.js"></script>
     <script type="text/javascript" src="assets/js/layout.js"></script>
-    <script type="text/javascript" src="assets/js/processor.js"></script>
     <script type="text/javascript" src="assets/js/compiler.js"></script>
     <script type="text/javascript" src="assets/js/debugger.js"></script>
+    <script type="text/javascript" src="assets/js/simulator.js"></script>
 </body>
 </html>
