--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 </div>
             </div>
             <div class="simulation">
+                <div id="simButtons">
+                    <button id="stepSim" disabled="disabled">Step</button>
+                    <button id="runSim" disabled="disabled">Run</button>
+                    <input class="ms-selector" type="number" step="1" min="250" max="10000" id="speed" name="speed" title="speed" placeholder="delay in ms" disabled="disabled" />
+                    <button id="resetSim" disabled="disabled">Reset</button>
+                </div>
                 <div class="processor">
                     <ul class="topPins">
                         <li class="pin top out-0-0"></li>
@@ -101,45 +107,45 @@
                         <li class="pin pin-in right"></li>
                     </ul>
                     <ul class="bottomPins">
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in in-0-3 bottom"></li>
+                        <li class="pin pin-in in-0-2 bottom"></li>
+                        <li class="pin pin-in in-0-1 bottom"></li>
+                        <li class="pin pin-in in-0-0 bottom"></li>
 
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in in-1-3 bottom"></li>
+                        <li class="pin pin-in in-1-2 bottom"></li>
+                        <li class="pin pin-in in-1-1 bottom"></li>
+                        <li class="pin pin-in in-1-0 bottom"></li>
 
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in in-2-3 bottom"></li>
+                        <li class="pin pin-in in-2-2 bottom"></li>
+                        <li class="pin pin-in in-2-1 bottom"></li>
+                        <li class="pin pin-in in-2-0 bottom"></li>
 
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in in-3-3 bottom"></li>
+                        <li class="pin pin-in in-3-2 bottom"></li>
+                        <li class="pin pin-in in-3-1 bottom"></li>
+                        <li class="pin pin-in in-3-0 bottom"></li>
 
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in in-4-3 bottom"></li>
+                        <li class="pin pin-in in-4-2 bottom"></li>
+                        <li class="pin pin-in in-4-1 bottom"></li>
+                        <li class="pin pin-in in-4-0 bottom"></li>
 
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in in-5-3 bottom"></li>
+                        <li class="pin pin-in in-5-2 bottom"></li>
+                        <li class="pin pin-in in-5-1 bottom"></li>
+                        <li class="pin pin-in in-5-0 bottom"></li>
 
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in in-6-3 bottom"></li>
+                        <li class="pin pin-in in-6-2 bottom"></li>
+                        <li class="pin pin-in in-6-1 bottom"></li>
+                        <li class="pin pin-in in-6-0 bottom"></li>
 
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
-                        <li class="pin pin-in bottom"></li>
+                        <li class="pin pin-in in-7-3 bottom"></li>
+                        <li class="pin pin-in in-7-2 bottom"></li>
+                        <li class="pin pin-in in-7-1 bottom"></li>
+                        <li class="pin pin-in in-7-0 bottom"></li>
                     </ul>
                 </div>
             </div>
@@ -149,8 +155,7 @@
                 <button id="build">Build</button>
                 <button id="stepForwardBtn" disabled="disabled">Step Forward</button>
                 <button id="stepBackBtn" disabled="disabled">Step Back</button>
-                <!--button id="simulate" disabled="disabled">Run</button-->
-                <!--input class="ms-selector" type="number" step="1" min="250" max="10000" id="speed" name="speed" title="speed" placeholder="delay in ms" /-->
+                <button id="toggleSim" disabled="disabled">Enable Simulation</button>
             </div>
             <div id="out">
                 <div id="terminal"></div>
