Damn forgot to push

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div id="simButtons">
                     <button id="stepSim" disabled="disabled">Step</button>
                     <button id="runSim" disabled="disabled">Run</button>
-                    <input class="ms-selector" type="number" step="1" min="250" max="10000" id="speed" name="speed" title="speed" placeholder="delay in ms" disabled="disabled" />
+                    <input class="ms-selector" type="number" step="1" min="1" max="10000" id="speed" name="speed" title="speed" placeholder="delay in ms" disabled="disabled" />
                     <button id="resetSim" disabled="disabled">Reset</button>
                 </div>
                 <div class="processor">
@@ -171,5 +171,7 @@
     <script type="text/javascript" src="assets/js/compiler.js"></script>
     <script type="text/javascript" src="assets/js/debugger.js"></script>
     <script type="text/javascript" src="assets/js/simulator.js"></script>
+
+    <script type="text/javascript" src="assets/js/testCode.js"></script>
 </body>
 </html>
